--- a/Assignment 3.ipynb
+++ b/Assignment 3.ipynb
@@ -14,10 +14,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -28,7 +26,7 @@
     "\n",
     "plt.rcParams['savefig.dpi'] = 100 # This controls the size of your figures\n",
     "# Comment out and restart notebook if you only want the last output of each cell.\n",
-    "InteractiveShell.ast_node_interactivity = \"all\" "
+    "#InteractiveShell.ast_node_interactivity = \"all\" "
    ]
   },
   {
@@ -53,10 +51,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Load the data set\n",
@@ -82,7 +78,7 @@
     "    ])\n",
     "    \n",
     "    score = []\n",
-    "    for i in range(0,8):\n",
+    "    for i in range(len(transformations)):\n",
     "        transf_data =   np.matmul(data, transformations[i])\n",
     "        score.append(np.linalg.norm( transf_data - ref_data, ord=1) )\n",
     "        \n",
@@ -92,6 +88,54 @@
     "    print(\"Aligned the data sets. Score is {0:10.1f}  \".format(score[idx]))\n",
     "    \n",
     "    return transf_data, score[idx]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### a)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### b)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### c)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# c)"
    ]
   },
   {
@@ -196,7 +240,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.5.4"
   }
  },
  "nbformat": 4,
