Add parts a) and b) for Part 2

--- a/Assignment 3.ipynb
+++ b/Assignment 3.ipynb
@@ -277,22 +277,82 @@
     "+ \\sum_{k=1}^{n}~ \\sum_{\\ell=1}^{n} \\frac{d_{k\\ell}}{n^2} \n",
     "$$\n",
     "\n",
-    "You may use the following steps in your derivation.\n",
-    "\n",
+    "You may use the following steps in your derivation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### a) \n",
     "Expand  $d_{ij}$ to yield an expression of $\\langle {\\bf p}_i, {\\bf p}_j \\rangle$, $\\|{\\bf p}_i\\|^2$ and $\\|{\\bf p}_j\\|^2$.\n",
     "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{align}\n",
+    "d_{ij}  &= \\|{\\bf p}_i - {\\bf p}_j\\|^2 \\\\\n",
+    "        &= \\langle {\\bf p}_i - {\\bf p}_j, {\\bf p}_i - {\\bf p}_j \\rangle \\\\\n",
+    "        &= \\langle {\\bf p}_i - {\\bf p}_j, {\\bf p}_i \\rangle - \\langle {\\bf p}_i - {\\bf p}_j, {\\bf p}_j \\rangle \\\\\n",
+    "        &= (\\langle {\\bf p}_i, {\\bf p}_i \\rangle - \\langle {\\bf p}_j, {\\bf p}_i \\rangle) - (\\langle {\\bf p}_i, {\\bf p}_j \\rangle - \\langle {\\bf p}_j, {\\bf p}_j \\rangle) \\\\\n",
+    "        &= -2 \\langle {\\bf p}_i, {\\bf p}_j \\rangle +  \\langle {\\bf p}_i, {\\bf p}_i \\rangle +  \\langle {\\bf p}_j, {\\bf p}_j \\rangle \\\\\n",
+    "        &= -2 \\langle {\\bf p}_i, {\\bf p}_j \\rangle + \\|{\\bf p}_i\\|^2 + \\|{\\bf p}_j\\|^2\n",
+    "\\end{align}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### b) \n",
     "Show that the following holds for any $ {\\bf q} \\in \\mathbb{R}^d$:\n",
     "$$ \\sum_{1 \\leq i \\leq n} \\langle {\\bf p}_i , {\\bf q} \\rangle =   0$$\n",
     "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{align}\n",
+    "\\sum_{i = 1}^{n} \\langle {\\bf p}_i , {\\bf q} \\rangle \n",
+    "    &= \\left\\langle \\sum_{i = 1}^{n} {\\bf p}_i, {\\bf q} \\right\\rangle \\\\\n",
+    "    &= \\left\\langle \\vec{{\\bf 0}}, {\\bf q} \\right\\rangle \\\\\n",
+    "    &= 0\n",
+    "\\end{align}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### c) \n",
     "Prove that \n",
-    "$$ \\|{\\bf p}_i\\|^2 = \\sum_{\\ell=1}^{n} \\frac{d_{i\\ell}}{n} - \\sum_{k=1}^{n}~ \\sum_{\\ell=1}^{n} \\frac{d_{k\\ell}}{2n^2}$$\n",
-    "\n",
-    "### d) \n",
-    "Combine the steps in your proof. \n"
+    "$$ \\|{\\bf p}_i\\|^2 = \\sum_{\\ell=1}^{n} \\frac{d_{i\\ell}}{n} - \\sum_{k=1}^{n}~ \\sum_{\\ell=1}^{n} \\frac{d_{k\\ell}}{2n^2}$$"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### d) \n",
+    "Combine the steps in your proof. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -346,7 +406,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
