--- a/Assignment 3.ipynb
+++ b/Assignment 3.ipynb
@@ -333,13 +333,23 @@
    "source": [
     "### c) \n",
     "Prove that \n",
-    "$$ \\|{\\bf p}_i\\|^2 = \\sum_{\\ell=1}^{n} \\frac{d_{i\\ell}}{n} - \\sum_{k=1}^{n}~ \\sum_{\\ell=1}^{n} \\frac{d_{k\\ell}}{2n^2}$$"
+    "$$ \\|{\\bf p}_i\\|^2 = \\sum_{\\ell=1}^{n} \\frac{d_{i\\ell}}{n} - \\sum_{k=1}^{n}~ \\sum_{\\ell=1}^{n} \\frac{d_{k\\ell}}{2n^2}$$\n",
+    "\n",
+    "---"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "\\begin{align}\n",
+    "\\sum_{\\ell=1}^{n} \\frac{d_{i\\ell}}{n} - \\sum_{k=1}^{n}~ \\sum_{\\ell=1}^{n} \\frac{d_{k\\ell}}{2n^2}\n",
+    "&=  \\frac{1}{n} \\sum_{\\ell=1}^{n} \\left(-2 \\langle {\\bf p}_i, {\\bf p}_\\ell \\rangle + \\|{\\bf p}_i\\|^2 + \\|{\\bf p}_\\ell\\|^2 \\right)  -  \\frac{1}{2n^2} \\sum_{k=1}^{n} \\sum_{\\ell=1}^{n} \\left(-2 \\langle {\\bf p}_k, {\\bf p}_\\ell \\rangle + \\|{\\bf p}_k\\|^2 + \\|{\\bf p}_\\ell\\|^2 \\right) \\\\\n",
+    "&= 0 + \\frac{1}{n} \\sum_{\\ell=1}^{n} \\|{\\bf p}_i\\|^2 + \\frac{1}{n} \\sum_{\\ell=1}^{n} \\|{\\bf p}_\\ell\\|^2  -  \\frac{1}{2n^2} \\left(0 + n \\sum_{k=1}^{n} \\|{\\bf p}_k\\|^2 + n \\sum_{\\ell=1}^{n} \\|{\\bf p}_\\ell\\|^2\\right) \\\\\n",
+    "&= \\|{\\bf p}_i\\|^2 + \\frac{1}{n} \\sum_{\\ell=1}^{n} \\|{\\bf p}_\\ell\\|^2  -  \\frac{1}{n} \\sum_{\\ell=1}^{n} \\|{\\bf p}_\\ell\\|^2 \\\\\n",
+    "&= \\|{\\bf p}_i\\|^2\n",
+    "\\end{align}"
+   ]
   },
   {
    "cell_type": "markdown",
