Add final proof step 2d

--- a/Assignment 3.ipynb
+++ b/Assignment 3.ipynb
@@ -356,13 +356,22 @@
    "metadata": {},
    "source": [
     "### d) \n",
-    "Combine the steps in your proof. "
+    "Combine the steps in your proof. \n",
+    "\n",
+    "---"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "\\begin{align}\n",
+    "-2 \\langle {\\bf p}_i, {\\bf p}_j \\rangle\n",
+    "        &= d_{ij} - \\|{\\bf p}_i\\|^2 - \\|{\\bf p}_j\\|^2 \\\\\n",
+    "        &= d_{ij} - \\left(\\sum_{\\ell=1}^{n} \\frac{d_{i\\ell}}{n} - \\sum_{k=1}^{n}~ \\sum_{\\ell=1}^{n} \\frac{d_{k\\ell}}{2n^2}\\right) - \\left(\\sum_{\\ell=1}^{n} \\frac{d_{j\\ell}}{n} - \\sum_{k=1}^{n}~ \\sum_{\\ell=1}^{n} \\frac{d_{k\\ell}}{2n^2}\\right) \\\\\n",
+    "        &= d_{ij} - \\sum_{\\ell=1}^{n} \\frac{d_{i\\ell}}{n} - \\sum_{\\ell=1}^{n} \\frac{d_{j\\ell}}{n} + \\sum_{k=1}^{n}~ \\sum_{\\ell=1}^{n} \\frac{d_{k\\ell}}{n^2} \n",
+    "\\end{align}"
+   ]
   },
   {
    "cell_type": "markdown",
