Split cells and add markdown cells for part 3

--- a/Assignment 3.ipynb
+++ b/Assignment 3.ipynb
@@ -383,13 +383,37 @@
     "\n",
     "Prove that if the Jaccard Similarity of two sets is $0$, then minhashing always gives a correct estimate of the Jaccard similarity\n",
     "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### b) \n",
     "Let $H$ be a family of $(d_1,d_2,p_1,p_2)$-locality-sensitive hash functions.\n",
     "Assume that $p_2=0$ and assume we have a total numer of $m$ hash\n",
     "functions from this family available.  Which combination of AND-constructions\n",
     "and OR-constructions should we use to maximally amplify the hash family?\n",
     "\n",
-    "### (c) \n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### c) \n",
     "\n",
     "Let $H$ be a family of $(d_1,d_2,p_1,p_2)$-locality-sensitive hash functions.\n",
     "Assume that $p_2=\\frac{1}{n}$ and assume we have $n$ data points $\\bf P$\n",
@@ -405,8 +429,15 @@
     "$$\n",
     "\n",
     "which consists of the false positives of this query.\n",
-    "Derive the expected number of false-positives $E\\left[ X \\right]$."
+    "Derive the expected number of false-positives $E\\left[ X \\right]$.\n",
+    "\n",
+    "---"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
