Add proof for part 3a

--- a/Assignment 3.ipynb
+++ b/Assignment 3.ipynb
@@ -389,7 +389,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "If the Jaccard Similarity of two sets is 0, then by definition the sets are disjoint and thus all elements are distinct. The hash function maps each element to a distinct integer, thus it follows that all hashes are distinct. Since all hashes are distinct, the MinHash algorithm will find none that are the same, thus it produces an estimate of 0. $\\square$"
+   ]
   },
   {
    "cell_type": "markdown",
