--- a/Assignment 3.ipynb
+++ b/Assignment 3.ipynb
@@ -239,7 +239,7 @@
     "### c)\n",
     "- Visually compare how well the classes are separated in the different scatter plots. *We can see that the classes are best separated using 5 neighbours. The separation gets worse when the number of neighbours increases.*\n",
     "- What is the effect of changing the number of neighbors on the score computed in the alignment function? *The score calculates max(sum(abs(transfromed data-reference data))) over the collumns. With increased number of neighbours we see that this score gets lower.*\n",
-    "- What does it mean if the score is zero? When do you expect the score to become zero and why? *When the score is 0 then there is no difference in between both datasets. This means that the (tranformed) isomap with two components computed with N-1 neighbours is equal to the first 2 principal components. *"
+    "- What does it mean if the score is zero? When do you expect the score to become zero and why? *When the score is 0 then there is no difference in between both datasets. This means that the (tranformed) isomap with two components computed with N-1 neighbours is equal to the first 2 principal components. By taking N-1 as the number of neighbours, we lose the manyfold assumption and thus compute the principal components.*"
    ]
   },
   {
@@ -407,7 +407,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "*We will take an or construction with $L=m$. This yields a ($d_1,d_2, (1-(1-p_1))^m, 0$)-sensitive family with just this one hashfunction.*"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -432,6 +434,27 @@
     "Derive the expected number of false-positives $E\\left[ X \\right]$.\n",
     "\n",
     "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Take the set of 'far points':\n",
+    "$$Q=\\{p \\in P: d(p,q)\\geq d_2\\}$$\n",
+    "Since we do not know the size of Q nor have an estimate for this, we will use its upperbound: $|Q| \\leq n$ Because we use this upperbound we can only derive an upperbound for the expected value of X.\n",
+    "\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "X &= \\left|\\left\\{{\\bf p \\in P}~:~ h({\\bf p})=h({\\bf q}) ~\\wedge~ d({\\bf p,q}) \\geq d_2\\right\\}\\right|\\\\\n",
+    "&= \\left|\\left\\{{\\bf p \\in Q}~:~ h({\\bf p})=h({\\bf q})\\right\\}\\right| \\\\\n",
+    "\\mathbb{E}[X] &= |Q| \\cdot \\mathbb{P}[h({\\bf p}) = h({\\bf q})~|~{\\bf p} \\in Q]\\\\\n",
+    "&= |Q| \\cdot \\mathbb{P}[h({\\bf p}) = h({\\bf q})~|~d({\\bf p,q}) \\geq d_2] \\\\\n",
+    "&\\leq n \\cdot p_2 \\\\\n",
+    "&= n \\cdot \\dfrac{1}{n} \\\\\n",
+    "&= 1\n",
+    "\\end{aligned}\n",
+    "$$\n"
    ]
   },
   {
