--- a/Assignment 4.ipynb
+++ b/Assignment 4.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -26,11 +26,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'openml'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-e1bad7639d0d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mget_ipython\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmagic\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'matplotlib inline'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mpreamble\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrcParams\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'savefig.dpi'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m100\u001b[0m \u001b[0;31m# This controls the size of your figures\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# Comment out and restart notebook if you only want the last output of each cell.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mInteractiveShell\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mast_node_interactivity\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"all\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Uni/master1/ML-course/preamble.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpyplot\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mopenml\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0moml\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmglearn\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'openml'"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib inline\n",
     "from preamble import *\n",
@@ -68,11 +79,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded simple graph nodes\n",
+      "4\n",
+      "4\n",
+      "8\n",
+      "24\n",
+      "220.5\n",
+      "w4 & w5: [-4.4, -15.8]\n",
+      "W2: [-32.6]\n",
+      "W3: [-6.4]\n",
+      "W1: [-23.200000000000003]\n"
+     ]
+    }
+   ],
    "source": [
     "# %load basic_graph.py\n",
     "'''\n",
@@ -170,13 +196,17 @@
     "    def backward(self, d):\n",
     "        self.inputs[0].backward(d * self.output * (1.0 - self.output))\n",
     "\n",
-    "class ReLUNode(object):\n",
+    "class ReLUNode(Node):\n",
     "\n",
     "    def forward(self):\n",
-    "        raise NotImplementedError(\"Forward pass for ReLU activation node has not been implemented yet.\")\n",
+    "        self.output = max(0, self.inputs[0].forward())\n",
+    "        return self.output\n",
     "\n",
     "    def backward(self, d):\n",
-    "        raise NotImplementedError(\"Backward pass for ReLU activation node has not been implemented yet.\")\n",
+    "        if self.output > 0:\n",
+    "            self.inputs[0].backward(d*1)\n",
+    "        else:\n",
+    "            self.inputs[0].backward(d*0)\n",
     "\n",
     "class TanhNode(object):\n",
     "\n",
@@ -246,7 +276,8 @@
     "            raise ValueError(\"Unknown activation function.\")\n",
     "\n",
     "    def forward(self):\n",
-    "        return self.graph.forward()\n",
+    "        self.output = self.graph.forward()\n",
+    "        return self.output\n",
     "\n",
     "    def backward(self, d):\n",
     "        self.graph.backward(d)\n",
@@ -260,14 +291,38 @@
     "\n",
     "if __name__ == '__main__':\n",
     "    print(\"Loaded simple graph nodes\")\n",
+    "    inputs = [ConstantNode(2)]\n",
+    "    n1 = Neuron(inputs, [2], 'relu')\n",
+    "    o1 = n1.forward()\n",
+    "    print(o1)\n",
+    "    n2 = Neuron([n1], [1], 'relu')\n",
+    "    n3 = Neuron([n1], [2], 'relu')\n",
+    "    o2 = n2.forward()\n",
+    "    print(o2)\n",
+    "    o3 = n3.forward()\n",
+    "    print(o3)\n",
+    "    n4 = Neuron([n2, n3], [4, 1], 'relu')\n",
+    "    o4 = n4.forward()\n",
+    "    print(o4)\n",
+    "    mse = MSENode([n4, ConstantNode(3)])\n",
+    "    print(mse.forward())\n",
+    "    gMSE = mse.backward(1)\n",
+    "    print(\"w4 & w5: {}\".format(n4.get_weights()))\n",
+    "    print(\"W2: {}\".format(n2.get_weights()))\n",
+    "    print(\"W3: {}\".format(n3.get_weights()))\n",
+    "    print(\"W1: {}\".format(n1.get_weights()))\n",
     "\n",
+    "#     g4 = n4.backward(gMSE)\n",
+    "#     n3.backward(g4)\n",
+    "\n",
+    "    \n",
     "    # Example network\n",
-    "    #sg = SampleGraph(2, 2, 2, 1)\n",
-    "    #prediction = sg.forward()\n",
-    "    #print(\"Initial prediction is\", prediction)\n",
-    "    #sg.backward(1)\n",
-    "    #print(\"w has new value\", sg.w.output)\n",
-    "    #print(\"b has new value\", sg.b.output)\n",
+    "#     sg = SampleGraph(2, 2, 2, 1)\n",
+    "#     prediction = sg.forward()\n",
+    "#     print(\"Initial prediction is\", prediction)\n",
+    "#     sg.backward(1)\n",
+    "#     print(\"w has new value\", sg.w.output)\n",
+    "#     print(\"b has new value\", sg.b.output)\n",
     "\n",
     "    # Run your network here"
    ]
@@ -439,18 +494,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Code opdracht 2"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##"
+    "#### UItleg\n"
    ]
   },
   {
