Wiskunde toegevoegd bij 1

--- a/Assignment 4.ipynb
+++ b/Assignment 4.ipynb
@@ -27,7 +27,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -339,7 +341,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Uitleg\n"
+    "#### Manual calculations\n",
+    "We start with the manual calculations. $(x=2,y=3)$ and $(w_1,w_2,w_3,w_4,w_5)=(2,1,2,4,1)$. The forward calculations are straightforward: $n_1=\\max(w_1\\times x=2\\times 2,0)=4$, $n_2=\\max(w_2\\times n_1,0)=4$, $n_3=\\max(w_3\\times n_1,0)=8$, $n_4=\\max(n_2\\times w_4 + n_3\\times w_5,0)=24$. Finally, the MSE is $\\frac{1}{2}(n_4-y)^2=\\frac{1}{2}(24-3)^2=220.5$\n",
+    "\n",
+    "The backwards calculations are similar to the examples from the slides:\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "\\frac{\\delta L}{\\delta L}&=1&&\\\\\n",
+    "\\frac{\\delta L}{\\delta n_4}&=\\frac{\\delta}{\\delta n_4}\\frac{1}{2}(n_4-y)^2&=n_4-y&\\\\\n",
+    "\\frac{\\delta L}{\\delta w_5}&=\\frac{\\delta L}{\\delta n_4}\\frac{\\delta n_4}{\\delta w_5}&=n_3(n_4-y)&=168\\\\\n",
+    "\\frac{\\delta L}{\\delta w_4}&=\\frac{\\delta L}{\\delta n_4}\\frac{\\delta n_4}{\\delta w_4}&=n_2(n_4-y)&=84\\\\\n",
+    "\\frac{\\delta L}{\\delta w_3}&=\\frac{\\delta L}{\\delta n_4}\\frac{\\delta n_4}{\\delta n_3}\\frac{\\delta n_3}{\\delta w_3}&=w_5n_1(n_4-y)&=84\\\\\n",
+    "\\frac{\\delta L}{\\delta w_2}&=\\frac{\\delta L}{\\delta n_4}\\frac{\\delta n_4}{\\delta n_2}\\frac{\\delta n_2}{\\delta w_2}&=w_4n_1(n_4-y)&=336\\\\\n",
+    "\\frac{\\delta L}{\\delta w_1}&=\\frac{\\delta L}{\\delta n_4}\\frac{\\delta n_4}{\\delta n_2}\\frac{\\delta n_2}{\\delta n_1}\\frac{\\delta n_1}{\\delta w_1} + \\frac{\\delta L}{\\delta n_4}\\frac{\\delta n_4}{\\delta n_3}\\frac{\\delta n_3}{\\delta n_1}\\frac{\\delta n_1}{\\delta w_1}&=(w_5w_3+w_4w_2)x(n_4-y)&=252\n",
+    "\\end{align}\n",
+    "$$\n",
+    "These only hold for variables and input which are positive. Using ReLU, the proper value of, for example, $\\frac{\\delta n_4}{\\delta w_5}$ would be 0 for $n_3\\times w_5<0$ and $n_3$ for $n_3\\times w_5 > 0$, with no proper solution at 0 (we'll say that it is 0 in that case). However, all our products are positive.\n",
+    "\n",
+    "We then calculate the updated $w_i$ with $i=1,2,3,4,5$ using $w_i\\leftarrow w_i-\\alpha\\frac{\\delta L}{\\delta w_i}$:\n",
+    "$$\\begin{align}\n",
+    "(w_1,w_2,w_3,w_4,w_5)&\\leftarrow& (2-0.1\\times252,1-0.1\\times336,2-0.1\\times84,4-0.1\\times84,1-0.1\\times168)\\\\\n",
+    "&=&(-23.2,-32.6,-6.4,-4.4,-15.8)\n",
+    "\\end{align}$$\n"
    ]
   },
   {
