--- a/Assignment 4.ipynb
+++ b/Assignment 4.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -1184,13 +1184,232 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 67,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# Provide your solution here"
+    "# Provide your solution here\n",
+    "\n",
+    "from __future__ import print_function\n",
+    "from keras.models import Sequential\n",
+    "from keras import layers\n",
+    "import numpy as np\n",
+    "import keras\n",
+    "from six.moves import range\n",
+    "from keras.datasets import mnist\n",
+    "from keras.models import Sequential\n",
+    "from keras.layers import Dense, Dropout, Flatten\n",
+    "from keras.layers import Conv2D, Conv3D, MaxPooling2D, MaxPooling3D\n",
+    "from keras import backend as K\n",
+    "\n",
+    "from keras.layers.core import  Activation\n",
+    "from keras.optimizers import SGD\n",
+    "from keras.utils import np_utils\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "plt.rcParams['figure.figsize'] = (7,7) # Make the figures a bit bigger\n",
+    "import numpy as np\n",
+    "\n",
+    "batch_size = 128\n",
+    "nb_classes = 10\n",
+    "nb_epoch = 12\n",
+    "img_rows = 28\n",
+    "img_columns = 28\n",
+    "sumlength = 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6000 train samples\n",
+      "1000 test samples\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0., 0., 0., 0., 1., 0., 0., 0., 0.],\n",
+       "       [1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 1., 0., 0., 0., 0., 0.],\n",
+       "       [0., 1., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 1.],\n",
+       "       [0., 0., 1., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 1., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 1., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 1., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 1., 0., 0., 0., 0., 0.]])"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(X_train, y_train), (X_test, y_test) = mnist.load_data()\n",
+    "\n",
+    "X_train = X_train.reshape(6000, sumlength, img_rows, img_columns, 1)\n",
+    "X_test = X_test.reshape(1000, sumlength, img_rows, img_columns, 1)\n",
+    "\n",
+    "X_train = X_train.astype('float32')\n",
+    "X_test = X_test.astype('float32')\n",
+    "X_train /= 255\n",
+    "X_test /= 255\n",
+    "print(X_train.shape[0], 'train samples')\n",
+    "print(X_test.shape[0], 'test samples')\n",
+    "\n",
+    "# convert class vectors to binary class matrices\n",
+    "Y_train = y_train.reshape(6000, sumlength)\n",
+    "Y_test = y_test.reshape(1000, sumlength)\n",
+    "\n",
+    "#Y_train = sum(Y_train.T)\n",
+    "#Y_test = sum(Y_test.T)\n",
+    "\n",
+    "#nb_classes = 91\n",
+    "\n",
+    "Y_train = np_utils.to_categorical(Y_train, nb_classes)\n",
+    "Y_test = np_utils.to_categorical(Y_test, nb_classes)\n",
+    "\n",
+    "Y_train[0]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "conv3d_14 (Conv3D)           (None, 10, 28, 28, 32)    320       \n",
+      "_________________________________________________________________\n",
+      "activation_32 (Activation)   (None, 10, 28, 28, 32)    0         \n",
+      "_________________________________________________________________\n",
+      "conv3d_15 (Conv3D)           (None, 10, 26, 26, 32)    9248      \n",
+      "_________________________________________________________________\n",
+      "activation_33 (Activation)   (None, 10, 26, 26, 32)    0         \n",
+      "_________________________________________________________________\n",
+      "max_pooling3d_5 (MaxPooling3 (None, 10, 13, 13, 32)    0         \n",
+      "_________________________________________________________________\n",
+      "dropout_16 (Dropout)         (None, 10, 13, 13, 32)    0         \n",
+      "_________________________________________________________________\n",
+      "conv3d_16 (Conv3D)           (None, 10, 13, 13, 64)    18496     \n",
+      "_________________________________________________________________\n",
+      "activation_34 (Activation)   (None, 10, 13, 13, 64)    0         \n",
+      "_________________________________________________________________\n",
+      "conv3d_17 (Conv3D)           (None, 10, 11, 11, 64)    36928     \n",
+      "_________________________________________________________________\n",
+      "activation_35 (Activation)   (None, 10, 11, 11, 64)    0         \n",
+      "_________________________________________________________________\n",
+      "max_pooling3d_6 (MaxPooling3 (None, 10, 5, 5, 64)      0         \n",
+      "_________________________________________________________________\n",
+      "dropout_17 (Dropout)         (None, 10, 5, 5, 64)      0         \n",
+      "_________________________________________________________________\n",
+      "flatten_6 (Flatten)          (None, 16000)             0         \n",
+      "_________________________________________________________________\n",
+      "dense_10 (Dense)             (None, 512)               8192512   \n",
+      "_________________________________________________________________\n",
+      "activation_36 (Activation)   (None, 512)               0         \n",
+      "_________________________________________________________________\n",
+      "dropout_18 (Dropout)         (None, 512)               0         \n",
+      "_________________________________________________________________\n",
+      "dense_11 (Dense)             (None, 10)                5130      \n",
+      "_________________________________________________________________\n",
+      "activation_37 (Activation)   (None, 10)                0         \n",
+      "=================================================================\n",
+      "Total params: 8,262,634\n",
+      "Trainable params: 8,262,634\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = Sequential()\n",
+    "model.add(Conv3D(32, (1, 3, 3), padding='same', input_shape=X_train.shape[1:]))\n",
+    "model.add(Activation('relu'))\n",
+    "model.add(Conv3D(32, (1, 3, 3)))\n",
+    "model.add(Activation('relu'))\n",
+    "model.add(MaxPooling3D(pool_size=(1, 2, 2)))\n",
+    "model.add(Dropout(0.25))\n",
+    "\n",
+    "model.add(Conv3D(64, (1, 3, 3), padding='same'))\n",
+    "model.add(Activation('relu'))\n",
+    "model.add(Conv3D(64, (1, 3, 3)))\n",
+    "model.add(Activation('relu'))\n",
+    "model.add(MaxPooling3D(pool_size=(1, 2, 2)))\n",
+    "model.add(Dropout(0.25))\n",
+    "\n",
+    "model.add(Flatten())\n",
+    "model.add(Dense(512))\n",
+    "model.add(Activation('relu'))\n",
+    "model.add(Dropout(0.5))\n",
+    "model.add(Dense(nb_classes))\n",
+    "model.add(Activation('softmax'))\n",
+    "\n",
+    "model.compile(loss=keras.losses.categorical_crossentropy,\n",
+    "              optimizer=keras.optimizers.Adadelta(),\n",
+    "              metrics=['accuracy'])\n",
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Error when checking target: expected activation_31 to have 2 dimensions, but got array with shape (6000, 10, 10)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-64-4f20ce8f7328>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     17\u001b[0m           \u001b[0mverbose\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m           \u001b[0mvalidation_data\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_test\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mY_test\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 19\u001b[1;33m           callbacks=[lh])\n\u001b[0m\u001b[0;32m     20\u001b[0m \u001b[0mscore\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mevaluate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_test\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mY_test\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Test loss:'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mscore\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\keras\\models.py\u001b[0m in \u001b[0;36mfit\u001b[1;34m(self, x, y, batch_size, epochs, verbose, callbacks, validation_split, validation_data, shuffle, class_weight, sample_weight, initial_epoch, steps_per_epoch, validation_steps, **kwargs)\u001b[0m\n\u001b[0;32m    961\u001b[0m                               \u001b[0minitial_epoch\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0minitial_epoch\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    962\u001b[0m                               \u001b[0msteps_per_epoch\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0msteps_per_epoch\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 963\u001b[1;33m                               validation_steps=validation_steps)\n\u001b[0m\u001b[0;32m    964\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    965\u001b[0m     def evaluate(self, x=None, y=None,\n",
+      "\u001b[1;32m~\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\keras\\engine\\training.py\u001b[0m in \u001b[0;36mfit\u001b[1;34m(self, x, y, batch_size, epochs, verbose, callbacks, validation_split, validation_data, shuffle, class_weight, sample_weight, initial_epoch, steps_per_epoch, validation_steps, **kwargs)\u001b[0m\n\u001b[0;32m   1628\u001b[0m             \u001b[0msample_weight\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0msample_weight\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1629\u001b[0m             \u001b[0mclass_weight\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mclass_weight\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1630\u001b[1;33m             batch_size=batch_size)\n\u001b[0m\u001b[0;32m   1631\u001b[0m         \u001b[1;31m# Prepare validation data.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1632\u001b[0m         \u001b[0mdo_validation\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mFalse\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\keras\\engine\\training.py\u001b[0m in \u001b[0;36m_standardize_user_data\u001b[1;34m(self, x, y, sample_weight, class_weight, check_array_lengths, batch_size)\u001b[0m\n\u001b[0;32m   1478\u001b[0m                                     \u001b[0moutput_shapes\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1479\u001b[0m                                     \u001b[0mcheck_batch_axis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1480\u001b[1;33m                                     exception_prefix='target')\n\u001b[0m\u001b[0;32m   1481\u001b[0m         sample_weights = _standardize_sample_weights(sample_weight,\n\u001b[0;32m   1482\u001b[0m                                                      self._feed_output_names)\n",
+      "\u001b[1;32m~\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\keras\\engine\\training.py\u001b[0m in \u001b[0;36m_standardize_input_data\u001b[1;34m(data, names, shapes, check_batch_axis, exception_prefix)\u001b[0m\n\u001b[0;32m    111\u001b[0m                         \u001b[1;34m': expected '\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mnames\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m' to have '\u001b[0m \u001b[1;33m+\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    112\u001b[0m                         \u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m' dimensions, but got array '\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 113\u001b[1;33m                         'with shape ' + str(data_shape))\n\u001b[0m\u001b[0;32m    114\u001b[0m                 \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mcheck_batch_axis\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    115\u001b[0m                     \u001b[0mdata_shape\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdata_shape\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: Error when checking target: expected activation_31 to have 2 dimensions, but got array with shape (6000, 10, 10)"
+     ]
+    }
+   ],
+   "source": [
+    "class LossHistory(keras.callbacks.Callback):\n",
+    "    def on_train_begin(self, logs={}):\n",
+    "        self.loss = []\n",
+    "        self.val_loss = []\n",
+    "        self.acc = []\n",
+    "        self.val_acc = []\n",
+    "\n",
+    "    def on_batch_end(self, batch, logs={}):\n",
+    "        self.loss.append(logs.get('loss'))\n",
+    "        self.acc.append(logs.get('acc'))\n",
+    "\n",
+    "lh = LossHistory()\n",
+    "# Training loop\n",
+    "history = model.fit(X_train, Y_train,\n",
+    "          batch_size=batch_size,\n",
+    "          epochs=nb_epoch,\n",
+    "          verbose=1,\n",
+    "          validation_data=(X_test, Y_test),\n",
+    "          callbacks=[lh])\n",
+    "score = model.evaluate(X_test, Y_test, verbose=1)\n",
+    "print('Test loss:', score[0])\n",
+    "print('Test accuracy:', score[1])"
    ]
   },
   {
