mnist classifiing networks(part 3)

--- a/Assignment 4.ipynb
+++ b/Assignment 4.ipynb
@@ -26,10 +26,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -1184,14 +1182,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 24,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Provide your solution here\n",
-    "\n",
+    "import math\n",
     "from __future__ import print_function\n",
     "from keras.models import Sequential\n",
     "from keras import layers\n",
@@ -1200,9 +1196,10 @@
     "from six.moves import range\n",
     "from keras.datasets import mnist\n",
     "from keras.models import Sequential\n",
-    "from keras.layers import Dense, Dropout, Flatten\n",
+    "from keras.layers import Dense, Dropout, Flatten, TimeDistributed\n",
     "from keras.layers import Conv2D, Conv3D, MaxPooling2D, MaxPooling3D\n",
     "from keras import backend as K\n",
+    "from keras.layers import RNN, RepeatVector\n",
     "\n",
     "from keras.layers.core import  Activation\n",
     "from keras.optimizers import SGD\n",
@@ -1217,12 +1214,14 @@
     "nb_epoch = 12\n",
     "img_rows = 28\n",
     "img_columns = 28\n",
-    "sumlength = 10"
+    "sumlength = 10\n",
+    "HIDDEN_SIZE = 128\n",
+    "LAYERS=1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1236,19 +1235,38 @@
     {
      "data": {
       "text/plain": [
-       "array([[0., 0., 0., 0., 0., 1., 0., 0., 0., 0.],\n",
-       "       [1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 1., 0., 0., 0., 0., 0.],\n",
-       "       [0., 1., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 1.],\n",
-       "       [0., 0., 1., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "       [0., 1., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 1., 0., 0., 0., 0., 0., 0.],\n",
-       "       [0., 1., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 1., 0., 0., 0., 0., 0.]])"
+       "array([[[0., 0., 0., 1., 0., 0., 0., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0., 0., 0., 0., 0., 0., 0.]],\n",
+       "\n",
+       "       [[0., 0., 0., 0., 0., 1., 0., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0., 0., 0., 0., 0., 0., 0.]],\n",
+       "\n",
+       "       [[0., 0., 0., 1., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 1., 0., 0., 0., 0., 0., 0.]],\n",
+       "\n",
+       "       [[0., 0., 0., 0., 0., 1., 0., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0., 0., 0., 0., 0., 0., 0.]],\n",
+       "\n",
+       "       [[0., 0., 0., 0., 0., 0., 1., 0., 0., 0.],\n",
+       "        [0., 0., 1., 0., 0., 0., 0., 0., 0., 0.]],\n",
+       "\n",
+       "       [[0., 0., 0., 0., 1., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0., 0., 1., 0., 0., 0., 0.]],\n",
+       "\n",
+       "       [[0., 0., 0., 1., 0., 0., 0., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0., 0., 0., 0., 0., 0., 0.]],\n",
+       "\n",
+       "       [[0., 0., 1., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0., 0., 0., 0., 0., 0., 1.]],\n",
+       "\n",
+       "       [[0., 0., 0., 0., 1., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0., 0., 0., 0., 0., 1., 0.]],\n",
+       "\n",
+       "       [[0., 0., 0., 0., 0., 1., 0., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0., 0., 0., 0., 0., 0., 0.]]])"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1270,21 +1288,24 @@
     "Y_train = y_train.reshape(6000, sumlength)\n",
     "Y_test = y_test.reshape(1000, sumlength)\n",
     "\n",
-    "#Y_train = sum(Y_train.T)\n",
-    "#Y_test = sum(Y_test.T)\n",
+    "Y_train = sum(Y_train.T).reshape(6000,1)\n",
+    "Y_test = sum(Y_test.T).reshape(1000,1)\n",
+    "Y_train = np.concatenate((((Y_train-(Y_train%10))/10), (Y_train%10)), axis=1)\n",
+    "Y_test = np.concatenate((((Y_test-(Y_test%10))/10), (Y_test%10)), axis=1)\n",
     "\n",
     "#nb_classes = 91\n",
     "\n",
     "Y_train = np_utils.to_categorical(Y_train, nb_classes)\n",
     "Y_test = np_utils.to_categorical(Y_test, nb_classes)\n",
     "\n",
-    "Y_train[0]\n",
+    "Y_train[:10]\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1294,72 +1315,74 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "conv3d_14 (Conv3D)           (None, 10, 28, 28, 32)    320       \n",
+      "time_distributed_66 (TimeDis (None, 10, 28, 28, 32)    320       \n",
       "_________________________________________________________________\n",
-      "activation_32 (Activation)   (None, 10, 28, 28, 32)    0         \n",
+      "time_distributed_67 (TimeDis (None, 10, 26, 26, 32)    9248      \n",
       "_________________________________________________________________\n",
-      "conv3d_15 (Conv3D)           (None, 10, 26, 26, 32)    9248      \n",
+      "time_distributed_68 (TimeDis (None, 10, 13, 13, 32)    0         \n",
       "_________________________________________________________________\n",
-      "activation_33 (Activation)   (None, 10, 26, 26, 32)    0         \n",
+      "time_distributed_69 (TimeDis (None, 10, 13, 13, 32)    0         \n",
       "_________________________________________________________________\n",
-      "max_pooling3d_5 (MaxPooling3 (None, 10, 13, 13, 32)    0         \n",
+      "time_distributed_70 (TimeDis (None, 10, 13, 13, 64)    18496     \n",
       "_________________________________________________________________\n",
-      "dropout_16 (Dropout)         (None, 10, 13, 13, 32)    0         \n",
+      "time_distributed_71 (TimeDis (None, 10, 11, 11, 64)    36928     \n",
       "_________________________________________________________________\n",
-      "conv3d_16 (Conv3D)           (None, 10, 13, 13, 64)    18496     \n",
+      "time_distributed_72 (TimeDis (None, 10, 5, 5, 64)      0         \n",
       "_________________________________________________________________\n",
-      "activation_34 (Activation)   (None, 10, 13, 13, 64)    0         \n",
+      "time_distributed_73 (TimeDis (None, 10, 5, 5, 64)      0         \n",
       "_________________________________________________________________\n",
-      "conv3d_17 (Conv3D)           (None, 10, 11, 11, 64)    36928     \n",
+      "time_distributed_74 (TimeDis (None, 10, 1600)          0         \n",
       "_________________________________________________________________\n",
-      "activation_35 (Activation)   (None, 10, 11, 11, 64)    0         \n",
+      "time_distributed_75 (TimeDis (None, 10, 512)           819712    \n",
       "_________________________________________________________________\n",
-      "max_pooling3d_6 (MaxPooling3 (None, 10, 5, 5, 64)      0         \n",
+      "time_distributed_76 (TimeDis (None, 10, 512)           0         \n",
       "_________________________________________________________________\n",
-      "dropout_17 (Dropout)         (None, 10, 5, 5, 64)      0         \n",
+      "time_distributed_77 (TimeDis (None, 10, 10)            5130      \n",
       "_________________________________________________________________\n",
-      "flatten_6 (Flatten)          (None, 16000)             0         \n",
+      "time_distributed_78 (TimeDis (None, 10, 10)            0         \n",
       "_________________________________________________________________\n",
-      "dense_10 (Dense)             (None, 512)               8192512   \n",
+      "lstm_2 (LSTM)                (None, 128)               71168     \n",
       "_________________________________________________________________\n",
-      "activation_36 (Activation)   (None, 512)               0         \n",
-      "_________________________________________________________________\n",
-      "dropout_18 (Dropout)         (None, 512)               0         \n",
-      "_________________________________________________________________\n",
-      "dense_11 (Dense)             (None, 10)                5130      \n",
-      "_________________________________________________________________\n",
-      "activation_37 (Activation)   (None, 10)                0         \n",
+      "repeat_vector_1 (RepeatVecto (None, 2, 128)            0         \n",
       "=================================================================\n",
-      "Total params: 8,262,634\n",
-      "Trainable params: 8,262,634\n",
+      "Total params: 961,002\n",
+      "Trainable params: 961,002\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
     }
    ],
    "source": [
+    "RNN = layers.LSTM\n",
+    "\n",
     "model = Sequential()\n",
-    "model.add(Conv3D(32, (1, 3, 3), padding='same', input_shape=X_train.shape[1:]))\n",
-    "model.add(Activation('relu'))\n",
-    "model.add(Conv3D(32, (1, 3, 3)))\n",
-    "model.add(Activation('relu'))\n",
-    "model.add(MaxPooling3D(pool_size=(1, 2, 2)))\n",
-    "model.add(Dropout(0.25))\n",
+    "model.add(TimeDistributed(Conv2D(32, (3, 3), padding='same', activation='relu'), input_shape=X_train.shape[1:]))\n",
+    "model.add(TimeDistributed(Conv2D(32, (3, 3), activation='relu')))\n",
+    "model.add(TimeDistributed(MaxPooling2D(pool_size=(2, 2))))\n",
+    "model.add(TimeDistributed(Dropout(0.25)))\n",
     "\n",
-    "model.add(Conv3D(64, (1, 3, 3), padding='same'))\n",
-    "model.add(Activation('relu'))\n",
-    "model.add(Conv3D(64, (1, 3, 3)))\n",
-    "model.add(Activation('relu'))\n",
-    "model.add(MaxPooling3D(pool_size=(1, 2, 2)))\n",
-    "model.add(Dropout(0.25))\n",
+    "model.add(TimeDistributed(Conv2D(64, (3, 3), padding='same', activation='relu')))\n",
+    "model.add(TimeDistributed(Conv2D(64, (3, 3), activation='relu')))\n",
+    "model.add(TimeDistributed(MaxPooling2D(pool_size=(2, 2))))\n",
+    "model.add(TimeDistributed(Dropout(0.25)))\n",
     "\n",
-    "model.add(Flatten())\n",
-    "model.add(Dense(512))\n",
-    "model.add(Activation('relu'))\n",
-    "model.add(Dropout(0.5))\n",
-    "model.add(Dense(nb_classes))\n",
-    "model.add(Activation('softmax'))\n",
+    "model.add(TimeDistributed(Flatten()))\n",
+    "model.add(TimeDistributed(Dense(512, activation='relu')))\n",
+    "model.add(TimeDistributed(Dropout(0.5)))\n",
+    "model.add(TimeDistributed(Dense(nb_classes)))\n",
+    "model.add(TimeDistributed(Activation('softmax')))\n",
     "\n",
+    "model.add(RNN(HIDDEN_SIZE))\n",
+    "model.add(RepeatVector(2))\n",
+    "for _ in range(LAYERS):\n",
+    "    # By setting return_sequences to True, return not only the last output but\n",
+    "    # all the outputs so far. \n",
+    "    # This is necessary as TimeDistributed in the below expects\n",
+    "    # the first dimension to be the timesteps.\n",
+    "    model.add(RNN(HIDDEN_SIZE, return_sequences=True))\n",
+    "\n",
+    "model.add(layers.TimeDistributed(layers.Dense(10)))\n",
+    "model.add(layers.Activation('softmax'))\n",
     "model.compile(loss=keras.losses.categorical_crossentropy,\n",
     "              optimizer=keras.optimizers.Adadelta(),\n",
     "              metrics=['accuracy'])\n",
@@ -1437,7 +1460,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.5.4"
   }
  },
  "nbformat": 4,
