--- a/Assignment 4.ipynb
+++ b/Assignment 4.ipynb
@@ -14,7 +14,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Please fill in your names here\n",
@@ -25,7 +27,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -436,7 +440,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Use this parameter to change the depth of the model\n",
@@ -897,7 +903,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Provide your solution here\n",
@@ -950,6 +958,7 @@
    "source": [
     "(X_train, y_train), (X_test, y_test) = mnist.load_data()\n",
     "\n",
+    "#change the data to be the right shape for sum calculation\n",
     "X_train = X_train.reshape(6000, sumlength, img_rows, img_columns, 1)\n",
     "X_test = X_test.reshape(1000, sumlength, img_rows, img_columns, 1)\n",
     "\n",
@@ -968,8 +977,6 @@
     "Y_test = sum(Y_test.T).reshape(1000,1)\n",
     "Y_train = np.concatenate((((Y_train-(Y_train%10))/10), (Y_train%10)), axis=1)\n",
     "Y_test = np.concatenate((((Y_test-(Y_test%10))/10), (Y_test%10)), axis=1)\n",
-    "\n",
-    "#nb_classes = 91\n",
     "\n",
     "Y_train = np_utils.to_categorical(Y_train, nb_classes)\n",
     "Y_test = np_utils.to_categorical(Y_test, nb_classes)\n"
@@ -1034,6 +1041,7 @@
     "RNN = layers.LSTM\n",
     "\n",
     "model = Sequential()\n",
+    "#add the cnn layers\n",
     "model.add(TimeDistributed(Conv2D(32, (3, 3), padding='same', activation='relu'), input_shape=X_train.shape[1:]))\n",
     "model.add(TimeDistributed(Conv2D(32, (3, 3), activation='relu')))\n",
     "model.add(TimeDistributed(MaxPooling2D(pool_size=(2, 2))))\n",
@@ -1050,6 +1058,7 @@
     "model.add(TimeDistributed(Dense(nb_classes)))\n",
     "model.add(TimeDistributed(Activation('softmax')))\n",
     "\n",
+    "#add the rnn layers over every set of 10 x\n",
     "model.add(RNN(HIDDEN_SIZE))\n",
     "model.add(RepeatVector(2))\n",
     "for _ in range(LAYERS):\n",
@@ -1060,7 +1069,9 @@
     "    model.add(RNN(HIDDEN_SIZE, return_sequences=True))\n",
     "\n",
     "model.add(layers.TimeDistributed(layers.Dense(10)))\n",
+    "#we use the softmax activation function\n",
     "model.add(layers.Activation('softmax'))\n",
+    "#we use the cross entropy loss function\n",
     "model.compile(loss=keras.losses.categorical_crossentropy,\n",
     "              optimizer=keras.optimizers.Adadelta(),\n",
     "              metrics=['accuracy'])\n",
@@ -1114,6 +1125,7 @@
     }
    ],
    "source": [
+    "#collect the loss etc with each step\n",
     "class LossHistory(keras.callbacks.Callback):\n",
     "    def on_train_begin(self, logs={}):\n",
     "        self.loss = []\n",
@@ -1142,7 +1154,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Provide your justification here"
+    "##### Justification\n",
+    "\n",
+    "We can see that the accuracy of our model is only about 25%. We could potentially improve this by adding more layers or increasing the sample size, as the sum of 10 uniformly random integers is not a uniformly random integer and some classes might be underpopulated (for example, the sum total 1 is 10 times more common than sum total 0). We built our model by doing a similar cnn to the previous exercise with same hyperparameters, doing them in series of 10. Then we apply the RNN twice and make sure every 10 numbers correspond to 1 sum. We use cross entropy for loss as it interacts well with the many different classes. We use the ReLU nodes for the same reason as the previous exercise."
    ]
   }
  ],
@@ -1163,7 +1177,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
